# crux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/src/: analyzer.cpp  analyzer.hpp  graph.cpp  graph.hpp  main.cpp  reporter.cpp  reporter.hpp  scheduler.cpp  scheduler.hpp
engine/tests/: test_graph.cpp
examples/: cyclic_graph.json  diamond_graph.json  simple_pipeline.json
